Corrected task margins when on mobile devices

--- a/src/js/components/Header/Header.css
+++ b/src/js/components/Header/Header.css
@@ -5,9 +5,8 @@
     -webkit-box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.04);
     -moz-box-shadow:    0px 0px 15px 0px rgba(50, 50, 50, 0.04);
     box-shadow:         0px 0px 15px 0px rgba(50, 50, 50, 0.04);
-    border-bottom: 1px solid $border-color;
 
-    height: 130px;
+    border-bottom: 1px solid $border-color;
     padding: 15px 10px 0px 10px;
 
     &-logo {
