--- a/src/js/components/Task/Task.css
+++ b/src/js/components/Task/Task.css
@@ -4,6 +4,7 @@
     padding: 10px;
     height: 100px;
     margin-right: -10px;
+    margin-bottom: 14px;
 
     background-color: #ffffff;
     border: 1px;
